crates/tribute-passes/src/native/snapshots/tribute_passes__native__adapt_closure_layout__tests__closure_struct_anyref_adaptation.snap
---
source: crates/tribute-passes/src/native/adapt_closure_layout.rs
expression: result
---
core.module @test {
  !_closure = adt.struct<_closure(func_ptr: core.i64, env: core.ptr), {layout = "closure"}>

  clif.func {sym_name = "test_fn", type = clif.func_sig<(wasm.anyref) -> core.i32>} {
    ^bb0(%0: wasm.anyref):
      %1 = clif.symbol_addr {sym = @lifted_fn} : core.ptr
      %2 = adt.struct_new %1, %0 {type = !_closure} : !_closure
      %3 = adt.struct_get %2 {field = 0, type = !_closure} : core.i64
      %4 = adt.struct_get %2 {field = 1, type = !_closure} : core.ptr
      %5 = clif.call_indirect %3, %4 {sig = clif.func_sig<(core.ptr) -> core.i32>} : core.i32
      clif.return %5
  }
}
